--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,26 +12,15 @@ services:
          - PGID=1000
          - PORT=8211 # Optional but recommended
          - PLAYERS=16 # Optional but recommended
-         - SERVER_PASSWORD=worldofpals # Optional but recommended
+         - SERVER_PASSWORD="" # Optional but recommended
          - MULTITHREADING=true
          - RCON_ENABLED=true
          - RCON_PORT=25575
          - TZ=UTC
          - ADMIN_PASSWORD=adminPasswordHere
          - COMMUNITY=false  # Enable this if you want your server to show up in the community servers tab, USE WITH SERVER_PASSWORD!
-         - SERVER_NAME=World of Pals
-         - SERVER_DESCRIPTION=palworld-server-docker by Thijs van Loef
+         - SERVER_NAME=SteezeburgersInParadise
+         - SERVER_DESCRIPTION=Heaven on earth with an onion slice
+         - BACKUP_CRON_EXPRESSION="0 */4 * * *"
       volumes:
          - ./palworld:/palworld/
-      labels:
-         ofelia.enabled: "true"
-         ofelia.job-exec.datecron.schedule: "@every 4h"
-         ofelia.job-exec.datecron.command: "backup"
-
-   ofelia:
-      image: mcuadros/ofelia:latest
-      depends_on:
-         - palworld
-      command: daemon --docker
-      volumes:
-         - /var/run/docker.sock:/var/run/docker.sock:ro
